# UpLang

./: .coverage  .gitignore  CONTRIBUTING.md  GEMINI.md  LICENCE  LICENSE  MANIFEST.in  README.md  README_zh.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: coverage.yml  publish-to-pypi.yml  publish.yml
src/uplang/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  importer.py  io.py  json_parser.py  json_utils.py  lang_parser.py  models.py  sync.py  update_json.py  utils.py
src/uplang/commands/: base.py  check.py  init.py
src/uplang/core/: __init__.py  cache.py  comparator.py  extractor.py  importer.py  scanner.py  state.py  synchronizer.py
src/uplang/models/: __init__.py  language_file.py  mod.py  sync_result.py
src/uplang/utils/: __init__.py  hash_utils.py  json_handler.py  output.py  path_utils.py
src/uplang/web/: __init__.py  api.py  app.py  service.py
src/uplang/web/static/: app.js  index.html  style.css
tests/: README.md  __init__.py  conftest.py  create_test_data.py  test_cache.py  test_comparator.py  test_exceptions.py  test_extractor.py  test_hash_utils.py  test_importer.py  test_init.py  test_integration.py  test_json_handler.py  test_json_utils.py  test_lang_parser.py  test_models.py  test_output.py  test_path_utils.py  test_scanner.py  test_synchronizer.py  test_utils.py  test_web_api.py  test_web_app.py  test_web_init.py  test_web_service.py
