[project]
name = "uplang"
version = "1.0.0"
description = "A command-line tool to streamline the process of updating language files for Minecraft Java Edition modpacks."
readme = "README.md"
authors = [
    { name = "QianFuv", email = "qianfuv@qq.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "ruamel.yaml>=0.18.0",
]

[project.scripts]
uplang = "uplang.cli:main"

[project.urls]
Repository = "https://github.com/QianFuv/UpLang"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
omit = [
    "src/uplang/cli.py",
    "src/uplang/__main__.py",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"