[project]
name = "uplang"
version = "1.1.2"
description = "Command-line tool for updating MC Java modpack language files"
readme = "README.md"
authors = [
    { name = "QianFuv", email = "qianfuv@qq.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12, <3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.6"
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]

[tool.mypy]
disable_error_code = ["import-untyped"]